
@startuml exercice


class MyDatabase{  
     - {static} _data : Map<Integer, String>
     - {static} _count : int
     + write(inputString:String) : int
     
}

class EncodingModule{
    
   + encodeWithFiles()
   + encodeBasedOnNetworkAndDatabase()

}


class EncodingModuleClient  {

+ {static} main()

}




EncodingModule -- MyDatabase 

EncodingModuleClient -- EncodingModule 




@enduml